# task2

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  aggregate.cpp  align.cpp  analyze.cpp  dump.cpp  locate-demo.cpp  locate.cpp  query.cpp  sv.bed
data/final/: report.txt
data/sample/: sv.bed
include/: common.hpp  core.hpp  dict.hpp  index.hpp  numeric.hpp
source/: align.cpp  dict.cpp  index.cpp  locate.cpp  numeric.cpp  span.cpp  string.cpp
